attempt to fix border radius issue on mobile

--- a/src/assets/Styles/workitem.scss
+++ b/src/assets/Styles/workitem.scss
@@ -145,5 +145,9 @@
         img{
             border-radius:32px;
         }
+        .cover_container::before{
+            content:'';
+            background: none;
+        }
     }
 }
